Fix: Fix header and main label overlapping issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,8 +16,13 @@ font-family: 'Roboto', sans-serif; */
         center center;
     background-size: cover;
     /* width : 100vw; */
-    height: 100vh;
+    /* height: 100vh; */
     /* min-height: calc(100vh - 150px); */
+	position: relative;
+	min-height: calc(115vh - 150px);
+	display: flex;
+	align-items: center;
+	justify-content: center;
 }
 
 #logo {
@@ -30,29 +35,40 @@ font-family: 'Roboto', sans-serif; */
 }
 
 .main-label {
-    background-color: #fff;
-    position: relative;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    left: 50%;
+    /* background-color: #fff; */
+    position: absolute;
+    top: 20%;
+    /*transform: translate(-50%, -50%); */
+    /* left: 25%; */
     width: 50%;
     /* height: 70%; */
     text-align: center;
-    border-radius: 0.8em;
+    line-height: 50px;
+/*     
     display: flex;
-    justify-content: space-around;
+    justify-content: space-around; */
+    /* top: 25%; */
+    border-radius: 0.8em;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
         rgba(0, 0, 0, 0.22) 0px 15px 12px;
+        background-color: #fff;
+        
 }
 
 #user-name-label,
 #choose-difficulty-panel,
-#questions-sec {
+#questions-sec, #result-sec {
     padding: 16px 16px 16px 16px;
     /* margin-top: 5%; */
-    line-height: 60px;
+    /* line-height: 60px; */
     /*  */
     clear: both;
+
+
+    /* background-color: #fff;
+    position: fixed; */
+    /* border-radius: 0.8em; */
+    /* width: 90%; */
 }
 
 p,
@@ -83,13 +99,16 @@ input[type="text"] {
 #start-game-btn,
 #restart-page-btn {
     padding: 8px 8px 8px 8px;
-    margin-bottom: 28px;
+    margin-bottom: 4px;
 }
 
 #start-game-btn:hover,
 #restart-page-btn:hover {
     color: #fff;
     background-color: #000;
+}
+#main-inner{
+    align-items: center;
 }
 ul {
     font-family: "Oswald", sans-serif;
@@ -113,7 +132,7 @@ li:hover {
     padding: 4px 0px 0px 4px;
     float: left;
     margin-left: 8px;
-    position: absolute;
+    /* position: absolute; */
 }
 
 .timer-logo {
@@ -136,6 +155,7 @@ h2 {
     font-size: xxx-large;
     background-color: #000;
     color: #fff;
+    padding: 8px;
     /* margin-top: 11%; */
 }
 
@@ -144,7 +164,7 @@ h2 {
 }
 #result {
     clear: both;
-    padding: 24px;
+    /* padding: 24px; */
 }
 #load-result {
     display: none;
@@ -161,103 +181,68 @@ h2 {
 
 /* For large Tablets */
 @media screen and (max-width: 1250px) {
-    .main-label {
-        width: 70%;
-    }
-}
-
-/* For large to medium Tablets */
-@media screen and (max-width: 950px) {
-    /* #body-inner{
-        min-height: calc(130vh - 150px);
-    } */
     #body-inner {
-        /* calc(140vh - 150px) */
-        min-height: auto;
+        /* min-height: calc(150vh - 150px); */
+        min-height: calc(110vh - 150px);
     }
     .main-label {
-        width: 70%;
-        /* top:60%; */
+        width: 80%;
     }
 }
 /* For Medium size Tablets */
-@media screen and (max-width: 700px) {
-    #body-inner {
-        /* calc(140vh - 150px) */
-        
-        min-height: auto;
-    }
+@media screen and (max-width: 780px) {
+
     .main-label {
         width: 90%;
-        transform: translate(-50%, -50%);
-        /* top:60%; */
+    }
+    p,
+    input,
+    button,
+    #no-user-name-msg {
+        font-size: x-large;
+        line-height: 40px;
+    }
+    h2 {
+        font-size: xx-large;
+    }
+}
+
+/* For Medium size Tablets */
+@media screen and (max-width: 700px) {
+    #body-inner {
+        min-height: calc(170vh - 150px);
+    }
+    .main-label {
+        line-height: 35px;
     }
 }
 
 /* For Small Tablets */
 @media screen and (max-width: 500px) {
     #body-inner {
-        /* calc(140vh - 150px) */
-        min-height: auto;
+        min-height: calc(200vh - 150px);
     }
-    .main-label {
-        width: 80%;
-        top: 60%;
-    }
+    /* .main-label {
+        width: 90%;
 
+    } */
     input[type="text"] {
         width: -webkit-fill-available;
         font-size: 1.3em;
     }
 }
 
-/* For Mobile phones */
-/* @media screen and (max-width: 455px) {
-    #body-inner {
-        min-height: auto; */
-        /* height: 90vh; */
-    
-
-    /* .main-label {
-        transform: translate(-50%, -50%);
-        width: 90%;
-        top: 50%;
-    }
-
-    p,
-    input,
-    button,
-    #no-user-name-msg {
-        font-size: x-large;
-        line-height: 40px;
-    }
-    h2 {
-        font-size: xx-large;
-    }
-} */
 @media screen and (max-width: 455px) {
     #body-inner {
-        min-height: auto;
-        /* height: 90vh; */
+        min-height: calc(115vh - 150px);
     }
-
     .main-label {
-        transform: translate(-50%, -50%);
         width: 90%;
-        top: 50%;
+        top: 15%;
     }
 
-    p,
-    input,
-    button,
-    #no-user-name-msg {
-        font-size: x-large;
-        line-height: 40px;
-    }
-    h2 {
-        font-size: xx-large;
-    }
 }
+
 /* For much smaller mobile screens */
 @media screen and (max-width: 350px) {
     #logo {
@@ -265,7 +250,6 @@ h2 {
     }
     .main-label {
         width: 95%;
-        top: 50%;
     }
 
     p,
@@ -274,7 +258,7 @@ h2 {
     #no-user-name-msg,
     li {
         font-size: large;
-        line-height: 40px;
+        line-height: 25px;
     }
     h2 {
         font-size: x-large;
